add some fields with form

--- a/config/database.yml
+++ b/config/database.yml
@@ -85,3 +85,10 @@ production:
   database: Attendance_project_production
   username: postgres
   password: postgres
+
+
+
+
+
+# Ver Cluster Port Status Owner    Data directory              Log file
+# 12  main    5432 down   postgres /var/lib/postgresql/12/main /var/log/postgresql/postgresql-12-main.log
