--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "Attendance_project",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^5.2.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1"
+  }
 }
